--- a/coffee.html
+++ b/coffee.html
@@ -43,22 +43,45 @@
     </div>
 </div>
 
+<script src = "https://code.jquery.com/jquery.js"></script>
+
 <script>
+    // jquery version
+    // var myImage =  $('#coffee_image');
+    // var myRevenueMessage = $('#revenue');
 
-    var myImage = document.getElementById("coffee_image");
-    var myRevenueMessage = document.getElementById("revenue");
+    $("#coffee_image").attr("src", "static/coffee_beans.jpg")
 
-    myImage.setAttribute('src', "static/coffee_beans.jpg");
+    $("#coffee_image").click(makeCoffee);
 
-    myImage.addEventListener('click', function () {
-        return makeCoffee("brew");
-    });
-
-    function makeCoffee() {
-         myImage.src = "static/coffee_machine.jpg";
-         setTimeout(function() { myImage.setAttribute('src', "static/coffee_mug.jpg"); }, 500);
-         setTimeout(function() { myImage.setAttribute('src', "static/coffee_beans.jpg"); }, 1500);
+    function makeCoffee(evt) {
+        $("#coffee_image").attr("src", "static/coffee_machine.jpg");
+        setTimeout(function() {
+            $("#coffee_image").attr("src", "static/coffee_mug.jpg")
+            }, 500);
+        setTimeout(function() {
+            $("#coffee_image").attr("src", "static/coffee_beans.jpg")
+            }, 1500);
     }
+
+    // code review questions:
+    // Why doesn't setAttribute work anymore?
+
+    // javascript version 
+    // var myImage = document.getElementById("coffee_image");
+    // var myRevenueMessage = document.getElementById("revenue");
+
+    // myImage.setAttribute('src', "static/coffee_beans.jpg");
+
+    // myImage.addEventListener('click', function () {
+    //     return makeCoffee();
+    // });
+
+    // function makeCoffee() {
+    //      myImage.src = "static/coffee_machine.jpg";
+    //      setTimeout(function() { myImage.setAttribute('src', "static/coffee_mug.jpg"); }, 500);
+    //      setTimeout(function() { myImage.setAttribute('src', "static/coffee_beans.jpg"); }, 1500);
+    // }
 
 </script>
 
